Version 1.2.5
Save Compatible

- Fixed a crash that occured when entering missions.



Version 1.2.4
Save Compatible

- Added a Nexerelin Background that starts you off with 3 random officers, which you can never replace.
- The Strikecraft Aptitude now allows picking two of its capstones instead of just one.
- Added the "Synchronised" skill to Strikecraft, a skill that lets the player link to their own fighters, piloted fighters gain several boosts.
- Fixed a crash with the Re-Entry skill



Version 1.2.3
Save Compatible

- Replaced the Rare Salvage buff from "Expedition" with a normal salvage buff, and increased some of the stat increases it provides.
- The innitial officer selection now actually shows an officers category.
- Fixed an issue that made aptitudes not ordered correctly in the bar events panel.
- Fixed an issue that made some custom starts not provide their full amount of skillpoints.
- Fixed a crash with the "Overwhelming Force" skill



Version 1.2.2
Save Compatible with 1.1.x & 1.2.x

- Reduced "Iron Sight"s range increase to 10%, but gave it a 25% weapon repair speed increase in exchange.
- Reduced the Mass from "Immoveable Object" increase to be a 2x mult instead.
- Reduced "Deflective Platings" damage reduction from 60% to 50%.
- Reduced "Tenacity"s effective armor increase to 75/100/125/150, based on hullsize.
- Reduced "Surefire Impacts" increase in missile speed from 30% to 20%.



Version 1.2.1
Save Compatible with 1.1.x & 1.2.x

- Fixed the "Manage" button occasionaly causing the same officer to be on multiple slots at once (purely visual bug, though may cause issues if interacted with)



Version 1.2.0
Save Compatible with 1.1.x

- Added the "Warfare" Aptitude, which comes with low-tech adjacent skills.
- You can now Respecc Executive Officers at a cost of 4 story points per officer.
  - This option mostly exists for Unique Officers, where finding a duplicate to specialise differently is impossible.
